Added form check for validity

--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
         </label>
         <br>
         <label>Your email:
-            <input type="email" id="client-email">
+            <input type="email" id="client-email" required>
         </label>
         <br>
         <label>Your comment:
